css/layouts/blog.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: rgb(61, 146, 201);
}

h1 {
    color: #00813F;
    font-family: 'Dosis', sans-serif;
    font-size: 2.3em

}


h2, h2 a {
    color: #00813F;
    font-family: 'Dosis', sans-serif;
    font-weight: bold;
    font-size:1.5em;
}

h2 a:hover, h3 a:hover {
    text-decoration: none;
}

h3 {
    font-family: 'Dosis', sans-serif;

    font-weight: bold;
}

/* LAYOUT CSS */
.pure-img-responsive {
    max-width: 100%;
    height: auto;
}

#layout {
    padding: 0;
}

.header {
    text-align: center;
    top: auto;
    margin: 3em auto;
    background-color:rgba(0, 0, 0, 0.5);
    padding: 1em;
}

body {
    background-color: #FCFCFC   
    font-style: 'Helvetica', sans-serif;
}

p   {
    color: #333333;
    line-height: 125%;
}

.sidebar {
    background-image: url("https://raw.githubusercontent.com/timothyjj/newyorktrailheads/gh-pages/img/sidebar-background.jpg");
    color: #fff;
}

.brand-title,
.brand-tagline {
    margin: 0;
}

.brand-title, h1.brand-title {
    text-transform: uppercase;
    color: #66CD00;
    font-size:1.5em;
    font-family: 'Raleway', sans-serif;
    letter-spacing: 1px;
    font-weight: 800;
    margin-bottom: 15px;
}

.header a:hover {
    text-decoration: none;
}

.brand-tagline {
    font-weight: 300;
    color: rgb(176, 202, 219);
    font-family: 'Helvetica', sans-serif
}

.nav-list {
    margin: 0;
    padding: 0;
    list-style: none;
}
.nav-item {
    display: inline-block;
    *display: inline;
    zoom: 1;
}
.nav-item a {
    background: transparent;
    border: 2px solid rgb(176, 202, 219);
    color: #fff;
    margin-top: 1em;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    font-size: 85%;
}
.nav-item a:hover,
.nav-item a:focus {
    border: 2px solid rgb(61, 146, 201);
    text-decoration: none;
}

.content-subhead {
    text-transform: uppercase;
    color: #aaa;
    border-bottom: 1px solid #eee;
    padding: 0.4em 0;
    font-size: 80%;
    font-weight: 500;
    letter-spacing: 0.1em;
}

.content {
    padding: 1em 1em 0;
    max-width: 1000px;
}

.post {
    padding-bottom: 1em;
}
.post-title {
    font-size: 1.3em;
    font-weight: bold;
    color: rgb(61, 146, 201);;
    margin-bottom: 0.1em;
    font-family: 'Dosis', sans-serif;
}

.post-title a {
    color: rgb(61, 146, 201);;
    text-decoration: none;
}

.post-avatar {
    border-radius: 50px;
    float: right;
    margin-left: 1em;
}
.post-description {
    color: rgb(169,169,169);
    padding-bottom: 5px;

}
.post-meta {
    color: #999;
    font-size: 90%;
    margin: 0;
}

.post-category {
    margin: 0 0.1em;
    padding: 0.3em 1em;
    color: #fff;
    background: #999;
    font-size: 80%;
}
    .post-category-design {
        background: #5aba59;
    }
    .post-category-pure {
        background: #4d85d1;
    }
    .post-category-yui {
        background: #8156a7;
    }
    .post-category-js {
        background: #df2d4f;
    }

.post-images {
    margin: 1em 0;
}
.post-image-meta {
    margin-top: -3.5em;
    margin-left: 1em;
    color: #fff;
    text-shadow: 0 1px 1px #333;
}

.footer {
    text-align: left;
    padding: 1em 0;
}
.footer a {
    color: #ccc;
    font-size: 80%;
}
.footer .pure-menu a:hover,
.footer .pure-menu a:focus {
    background: none;
}

.read-more-section {
    background-color: #00813F ;
    color:white;
    font-size: 1.3em;
    border: 1px solid #00813F ;
    padding: 3px;
    text-decoration: none;
    max-width: 300px;
    padding-bottom: 10px;

    font-family: 'Raleway', sans-serif
}

.read-more-section:hover {
    background-color:#FF6600;
}

.read-more a {
    text-decoration: none;
}

.read-more a:hover {
    text-decoration: none;
}

@media (min-width: 48em) {
    .content {
        padding: 2em 3em 0;
        margin-left: 25%;
    }

    .header {
        margin: 80% 0.5em 0;
        text-align: right;
    }

    .sidebar {
        position: fixed;
        top: 0;
        bottom: 0;
    }

}

hr {
    color: #00813F;
}

@media (min-width: 48em) and (max-width: 65em) {
    .brand-title {
        font-size: 1em;
    }
}

@media (max-width: 47em) {
    .header {
        margin: 0.2em auto;}
    .brand-title {
        font-size:0.8em;}
    h2.brand-tagline {
        font-size: 1em;
        } 
    }

}

img {
    max-width: 100%
}



.google-maps {
    position: relative;
    padding-bottom: 56.25%; // This is the aspect ratio
    height: 0;
    overflow: hidden;
}
.google-maps iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100% !important;
    height: 100% !important;
}

.homecopy {
    font-size: 1.2em;
    line-height: 1.6em;
}

.page_number {
    font-size: .8em;
    font-weight: bold;
}

.pagination {
    text-align: right;
}

.pure-menu-link {
    font-size: 1em;
    color: white;
}

.pure-menu-link:hover {
    color: gray;
}

.top-nav {
    background-color: #00813F;
}

a.headinglink {
    color: #00813F;
}

img.social-icon {
    width: 30px;
}

ul.footer-nav {
    margin-left: -30px;

}

.options-box {
        /* background-image: url("/img/eastern-ridge-view.jpg");
        background-repeat: no-repeat;
        max-width: 250px;
        float: left; */
        margin: auto;
        display: inline-block;
        width: 185px;
        text-align: left;
} 

.options {
    list-style: none;
    font-size: 1.1em;

}

.optionswrapper {
    text-align: center;
}
@media (max-width: 640px) {
    .optionswrapper {
        display:none;
    }
}

li.options {
    margin-left: -50px;
    padding: 5px;
    max-width: 275px;
    border-top: 1px solid #B0CADB;
    font-size: 1em;
    background-color:rgba(0, 0, 0, 0.6);
    color: #FF6600;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;


}

li.options-first {
    border-top: none;
}

li.last-child {
    border-bottom: none;
}

li.options:hover {
    color:white;
    background-color: #66CD00;
    text-shadow: none;

}

img.emoji {  
  // Override any img styles to ensure Emojis are displayed inline
  margin: 0px !important;
  display: inline !important;
}

.desc {display: none;}​

.social-icon-list, .social-icon-item {
    display: inline;
    float: right;
    list-style-type: none;
}

.social-icon-item {
    padding-left: 10px;
}

.adsense {
    padding-top: 5px;
    padding-bottom: 5px;
} 

.post-image img{
    max-width: 200px;
    border: 3px solid #00813F;
    margin-right: 10px;
    float:left;
}
.postcontainer {
    width:100%;
    overflow:auto;
}

